RESOLVED FIXED219826
REGRESSION(r270715) [LFC][IFC] Whitespace as expansion opportunity should not change as we expand the runs
https://bugs.webkit.org/show_bug.cgi?id=219826
Summary REGRESSION(r270715) [LFC][IFC] Whitespace as expansion opportunity should not...
alan
Reported 2020-12-12 09:13:03 PST
ssia
Attachments
Patch (6.71 KB, patch)
2020-12-12 09:16 PST, alan
no flags
alan
Comment 1 2020-12-12 09:16:19 PST
EWS
Comment 2 2020-12-12 10:41:12 PST
Committed r270736: <https://trac.webkit.org/changeset/270736> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416097 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-12 10:42:40 PST
Note You need to log in before you can comment on or make changes to this bug.