REGRESSION(r270715) [LFC][IFC] Whitespace as expansion opportunity should not change as we expand the runs https://bugs.webkit.org/show_bug.cgi?id=219826

Reviewed by Antti Koivisto.

This is the property of the entire run and should be set based on the box and whether the initial part of the run
is whitespace or not.

* layout/inlineformatting/InlineLine.cpp:
(WebCore::Layout::Line::Run::Run):
(WebCore::Layout::Line::Run::expand):
(WebCore::Layout::Line::Run::visuallyCollapseTrailingWhitespace):
* layout/inlineformatting/InlineLine.h:
* layout/inlineformatting/InlineTextItem.cpp:
(WebCore::Layout::InlineTextItem::shouldPreserveSpacesAndTabs):
* layout/inlineformatting/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::shouldPreserveSpacesAndTabs):
* layout/inlineformatting/text/TextUtil.h:


Canonical link: https://commits.webkit.org/232399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270736 268f45cc-cd09-0410-ab3c-d52691b4dbfc