Source/WebCore/layout/inlineformatting/InlineLine.h
@@ -124,7 +124,7 @@ public:
         const Box* m_layoutBox { nullptr };
         InlineLayoutUnit m_logicalLeft { 0 };
         InlineLayoutUnit m_logicalWidth { 0 };
-        bool m_shouldPreserveWhitespace { false };
+        bool m_whitespaceIsExpansionOpportunity { false };
         TrailingWhitespace m_trailingWhitespaceType { TrailingWhitespace::None };
         InlineLayoutUnit m_trailingWhitespaceWidth { 0 };
         Optional<LineRun::Text> m_textContent;
